                                                     -*- coding: utf-8 -*-
Changes for APR 1.5.0

  *) Fix amd64 assembler version of apr_atomic_xchgptr(). PR 51851. [Mattias
     Engdegård <mattiase acm org>]

  *) Fix PPC atomics to work with gcc 4.0. PR 54840. [Mattias Engdegård
     <mattiase acm org>]

  *) Add apr_hash_this_key(), apr_hash_this_key_len(), and 
     apr_hash_this_val() for easier access to those attributes from
     a hash iterator.  [Hyrum K. Wright <hyrum_wright mail.utexas.edu>]

  *) MinGW/MSYS:  Support shared builds of APR, other general improvements
     to support of this toolchain.  PR 46175.  [Carlo Bramini 
     <carlo.bramix libero.it>]  

  *) Improve platform detection by updating config.guess and config.sub.
     [Rainer Jung]

  *) Add support for OSX Mountain Lion (10.8) [Jim Jagielski]

  *) apr_socket_opt_set: Add support for APR_SO_BROADCAST. PR 46389.
     [Armin Müller <mueller itestra com>]

Changes for APR 1.4.x and later:

  *) http://svn.apache.org/viewvc/apr/apr/branches/1.4.x/CHANGES?view=markup

Changes for APR 1.3.x and later:

  *) http://svn.apache.org/viewvc/apr/apr/branches/1.3.x/CHANGES?view=markup

Changes for APR 1.2.x and later:

  *) http://svn.apache.org/viewvc/apr/apr/branches/1.2.x/CHANGES?view=markup

Changes for APR 1.1.x and later:

  *) http://svn.apache.org/viewvc/apr/apr/branches/1.1.x/CHANGES?view=markup

Changes for APR 1.0.x and later:

  *) http://svn.apache.org/viewvc/apr/apr/branches/1.0.x/CHANGES?view=markup

Changes for APR 0.9.x and later/earlier:

  *) http://svn.apache.org/viewvc/apr/apr/branches/0.9.x/CHANGES?view=markup